--- a/plugins/dockers/storyboarddocker/wdgstoryboarddock.ui
+++ b/plugins/dockers/storyboarddocker/wdgstoryboarddock.ui
@@ -91,23 +91,9 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QTableView" name="tableView"/>
-       </item>
-       <item>
-        <widget class="QScrollBar" name="verticalScrollBar">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-        </widget>
+        <widget class="QTreeView" name="treeView"/>
        </item>
       </layout>
-     </item>
-     <item>
-      <widget class="QScrollBar" name="horizontalScrollBar">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
      </item>
     </layout>
    </item>
