Add StoryboardDelegate Class

--- a/plugins/dockers/storyboarddocker/wdgstoryboarddock.ui
+++ b/plugins/dockers/storyboarddocker/wdgstoryboarddock.ui
@@ -91,7 +91,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QTreeView" name="treeView"/>
+        <widget class="QListView" name="listView"/>
        </item>
       </layout>
      </item>
