--- a/plugins/generators/pattern/wdgpatternoptions.ui
+++ b/plugins/generators/pattern/wdgpatternoptions.ui
@@ -44,22 +44,6 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="lblColor">
-         <property name="text">
-          <string>&amp;Color:</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-         <property name="buddy">
-          <cstring>bnColor</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="KisColorButton" name="bnColor"/>
-       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabTransform">
@@ -68,7 +52,7 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="4" column="0" colspan="2">
-        <widget class="QGroupBox" name="groupBox_5">
+        <widget class="QGroupBox" name="gb3dRotation">
          <property name="title">
           <string>3d Rotation:</string>
          </property>
@@ -111,7 +95,7 @@
         </widget>
        </item>
        <item row="1" column="0">
-        <widget class="QGroupBox" name="groupBox_2">
+        <widget class="QGroupBox" name="gbScale">
          <property name="title">
           <string>Scale:</string>
          </property>
@@ -175,7 +159,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QGroupBox" name="groupBox_3">
+        <widget class="QGroupBox" name="gbOffset">
          <property name="title">
           <string>Offset:</string>
          </property>
@@ -204,7 +188,7 @@
         </widget>
        </item>
        <item row="2" column="0" colspan="2">
-        <widget class="QGroupBox" name="groupBox_4">
+        <widget class="QGroupBox" name="gbShear">
          <property name="title">
           <string>Shear:</string>
          </property>
@@ -247,7 +231,7 @@
         </widget>
        </item>
        <item row="0" column="0" colspan="2">
-        <widget class="QGroupBox" name="groupBox">
+        <widget class="QGroupBox" name="gbRotation">
          <property name="title">
           <string>Rotation:</string>
          </property>
@@ -265,11 +249,6 @@
   </layout>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>KisColorButton</class>
-   <extends>QPushButton</extends>
-   <header>kis_color_button.h</header>
-  </customwidget>
   <customwidget>
    <class>KisPatternChooser</class>
    <extends>QWidget</extends>
