--- a/plugins/dockers/animation/onion_skins_docker.ui
+++ b/plugins/dockers/animation/onion_skins_docker.ui
@@ -47,7 +47,7 @@
       </sizepolicy>
      </property>
      <property name="title">
-      <string>Filter Frames by Color</string>
+      <string>Filter Onion Skins by Frame Color</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -73,14 +73,32 @@
       </property>
       <item>
        <widget class="QPushButton" name="resetFilter">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>65</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>55</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
         <property name="text">
          <string>Reset</string>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
         </property>
        </widget>
       </item>
