--- a/krita/pics/svg/svg-icons.qrc
+++ b/krita/pics/svg/svg-icons.qrc
@@ -61,10 +61,6 @@
         <file>transparency-locked.svg</file>
         <file>transparency-unlocked.svg</file>
         <file>workspace-chooser.svg</file>
-        <file>light_lazyframeOn.svg</file>
-        <file>light_lazyframeOff.svg</file>
-        <file>dark_lazyframeOn.svg</file>
-        <file>dark_lazyframeOff.svg</file>
         <file>dark_mirror-view.svg</file>
         <file>light_mirror-view.svg</file>
         <file>dark_rotation-reset.svg</file>
@@ -118,6 +114,8 @@
         <file>dark_audio-none.svg</file>
         <file>dark_audio-volume-high.svg</file>
         <file>dark_audio-volume-mute.svg</file>
+        <file>dark_auto-key-on.svg</file>
+        <file>dark_auto-key-off.svg</file>
         <file>dark_keyframe-add.svg</file>
         <file>dark_keyframe-remove.svg</file>
         <file>dark_zoom-fit.svg</file>
@@ -126,6 +124,8 @@
         <file>light_audio-none.svg</file>
         <file>light_audio-volume-high.svg</file>
         <file>light_audio-volume-mute.svg</file>
+        <file>light_auto-key-on.svg</file>
+        <file>light_auto-key-off.svg</file>
         <file>light_keyframe-add.svg</file>
         <file>light_keyframe-remove.svg</file>
         <file>light_zoom-fit.svg</file>
