--- a/krita/pics/svg/svg-icons.qrc
+++ b/krita/pics/svg/svg-icons.qrc
@@ -61,10 +61,6 @@
         <file>transparency-locked.svg</file>
         <file>transparency-unlocked.svg</file>
         <file>workspace-chooser.svg</file>
-        <file>light_lazyframeOn.svg</file>
-        <file>light_lazyframeOff.svg</file>
-        <file>dark_lazyframeOn.svg</file>
-        <file>dark_lazyframeOff.svg</file>
         <file>dark_mirror-view.svg</file>
         <file>light_mirror-view.svg</file>
         <file>dark_rotation-reset.svg</file>
@@ -155,5 +151,9 @@
         <file>light_ratio.svg</file>
         <file>dark_animation_pause.svg</file>
         <file>light_animation_pause.svg</file>
+        <file>light_auto-key-off.svg</file>
+        <file>light_auto-key-on.svg</file>
+        <file>dark_auto-key-on.svg</file>
+        <file>dark_auto-key-off.svg</file>
     </qresource>
 </RCC>
