--- a/plugins/dockers/advancedcolorselector/wdg_color_selector_settings.ui
+++ b/plugins/dockers/advancedcolorselector/wdg_color_selector_settings.ui
@@ -356,6 +356,25 @@
         </widget>
        </item>
        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_16">
+            <item>
+               <layout class="QGridLayout" name="gridLayout_7">
+                  <item row="0" column="0">
+                     <widget class="QCheckBox" name="useCustomColorForBackground">
+                        <property name="text">
+                           <string>Use custom color for selector background.</string>
+                        </property>
+                     </widget>
+                  </item>
+                  <item row="0" column="1">
+                     <widget class="KisColorButton" name="customColorBackgroundSelector">
+                     </widget>
+                  </item>
+               </layout>
+            </item>
+         </layout>
+      </item>
+       <item>
         <widget class="QGroupBox" name="useDifferentColorSpaceCheckbox">
          <property name="minimumSize">
           <size>
@@ -1523,6 +1542,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>KisColorButton</class>
+   <extends>QPushButton</extends>
+   <header>kis_color_button.h</header>
+  </customwidget>
   <customwidget>
    <class>KisDoubleParseSpinBox</class>
    <extends>QDoubleSpinBox</extends>
