Remove duplicated kis_slider_spin_box.h header
(cherry picked from commit 0ba1447e7902591293ff622baf4ba725bebf6c43)

--- a/libs/ui/forms/wdggeometryoptions.ui
+++ b/libs/ui/forms/wdggeometryoptions.ui
@@ -106,6 +106,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>KisDoubleSliderSpinBox</class>
+   <extends>QWidget</extends>
+   <header location="global">kis_slider_spin_box.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
