Disambiguate the preview label

--- a/plugins/tools/tool_transform2/wdg_tool_transform.ui
+++ b/plugins/tools/tool_transform2/wdg_tool_transform.ui
@@ -1701,7 +1701,7 @@
          <item>
           <widget class="QLabel" name="previewGranularity">
            <property name="text">
-            <string>Preview</string>
+            <string comment="preview the transformation of the current layer">Preview</string>
            </property>
           </widget>
          </item>
